--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,5 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(googletest)
 add_executable(run src/conversion.cpp src/helper_functions.cpp)
-add_executable(test src/unit_test.cpp)
-target_link_libraries(test gtest_main)
+add_executable(my_sample_gtest src/unit_test.cpp)
+target_link_libraries(my_sample_gtest gtest_main)
