--- a/.github/workflows/cmake_gtest_v3.yml
+++ b/.github/workflows/cmake_gtest_v3.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build
 
-      run: my_sample_gtest
+      run: ./my_sample_gtest
 
