--- a/.github/workflows/cmake_gtest_v3.yml
+++ b/.github/workflows/cmake_gtest_v3.yml
@@ -1,5 +1,5 @@
 
-name: Build and run simple unit test(s) on pull request
+name: Build and run simple unit test on pull request
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  build:
+  run_unit_test:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,5 +24,5 @@ jobs:
     - name: Test
       working-directory: ${{github.workspace}}/build
 
-      run: ./my_sample_gtest
+      run: ./unit_test
 
